force-app/main/default/objects/Support_Ticket__c/Support_Ticket__c.object-meta.xml
<CustomObject>
<enableActivities>true</enableActivities><enableReports>true</enableReports><enableSearch>true</enableSearch><label>Support Ticket</label><nameField><label>Ticket Number</label><type>AutoNumber</type><displayFormat>ST-{00000}</displayFormat></nameField><pluralLabel>Support Tickets</pluralLabel><sharingModel>Private</sharingModel>
</CustomObject>