force-app/main/default/objects/Support_Ticket__c/fields/Account__c.field-meta.xml
<CustomField><fullName>Account__c</fullName><label>Account</label><referenceTo>Account</referenceTo><relationshipLabel>Support Tickets</relationshipLabel><relationshipName>SupportTickets</relationshipName><type>Lookup</type></CustomField>