force-app/main/default/objects/Support_Ticket__c/fields/Assigned_Agent__c.field-meta.xml
<CustomField><fullName>Assigned_Agent__c</fullName><label>Assigned Agent</label><referenceTo>User</referenceTo><relationshipLabel>Assigned Support Tickets</relationshipLabel><relationshipName>AssignedSupportTickets</relationshipName><type>Lookup</type></CustomField>