force-app/main/default/objects/Support_Ticket__c/fields/Customer__c.field-meta.xml
<CustomField><fullName>Customer__c</fullName><label>Customer</label><referenceTo>Contact</referenceTo><relationshipLabel>Support Tickets</relationshipLabel><relationshipName>SupportTickets</relationshipName><type>Lookup</type></CustomField>