force-app/main/default/objects/Support_Ticket__c/fields/Description__c.field-meta.xml
<CustomField><fullName>Description__c</fullName><label>Description</label><length>32000</length><type>LongTextArea</type><visibleLines>5</visibleLines></CustomField>