force-app/main/default/objects/Support_Ticket__c/fields/High_Priority_Task_Created__c.field-meta.xml
<CustomField><fullName>High_Priority_Task_Created__c</fullName><defaultValue>false</defaultValue><label>High Priority Task Created</label><type>Checkbox</type></CustomField>