force-app/main/default/objects/Support_Ticket__c/fields/Priority_Reason__c.field-meta.xml
<CustomField><fullName>Priority_Reason__c</fullName><label>Priority Reason</label><length>255</length><type>Text</type></CustomField>