force-app/main/default/objects/Support_Ticket__c/fields/Resolution_Notes__c.field-meta.xml
<CustomField><fullName>Resolution_Notes__c</fullName><label>Resolution Notes</label><length>32000</length><type>LongTextArea</type><visibleLines>4</visibleLines></CustomField>