force-app/main/default/objects/Support_Ticket__c/fields/SLA_Status__c.field-meta.xml
<CustomField><fullName>SLA_Status__c</fullName><label>SLA Status</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>On Track</fullName><default>true</default><label>On Track</label></value><value><fullName>At Risk</fullName><default>false</default><label>At Risk</label></value><value><fullName>Breached</fullName><default>false</default><label>Breached</label></value></valueSetDefinition></valueSet></CustomField>