force-app/main/default/objects/Support_Ticket__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>New</fullName><default>true</default><label>New</label></value><value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value><value><fullName>Waiting on Customer</fullName><default>false</default><label>Waiting on Customer</label></value><value><fullName>Resolved</fullName><default>false</default><label>Resolved</label></value></valueSetDefinition></valueSet></CustomField>