force-app/main/default/objects/Support_Ticket__c/listViews/All_Tickets.listView-meta.xml
<ListView><columns>NAME</columns><columns>Customer__c</columns><columns>Priority__c</columns><columns>Status__c</columns><columns>Assigned_Agent__c</columns><columns>CREATED_DATE</columns><filterScope>Everything</filterScope><label>All Tickets</label></ListView>