force-app/main/default/objects/Support_Ticket__c/listViews/High_Priority_Tickets.listView-meta.xml
<ListView><columns>NAME</columns><columns>Customer__c</columns><columns>Status__c</columns><columns>Assigned_Agent__c</columns><columns>CREATED_DATE</columns><filterScope>Everything</filterScope><filters><field>Priority__c</field><operation>equals</operation><value>High</value></filters><label>High Priority Tickets</label></ListView>