force-app/main/default/objects/Support_Ticket__c/listViews/My_Assigned_Tickets.listView-meta.xml
<ListView><fullName>My_Assigned_Tickets</fullName><columns>NAME</columns><columns>Customer__c</columns><columns>Priority__c</columns><columns>Status__c</columns><columns>Assigned_Agent__c</columns><columns>CREATED_DATE</columns><filterScope>Mine</filterScope><label>My Assigned Tickets</label></ListView>