force-app/main/default/objects/Support_Ticket__c/listViews/Open_Tickets.listView-meta.xml
<ListView><fullName>Open_Tickets</fullName><columns>NAME</columns><columns>Customer__c</columns><columns>Priority__c</columns><columns>Status__c</columns><columns>Assigned_Agent__c</columns><columns>CREATED_DATE</columns><filterScope>Everything</filterScope><filters><field>Status__c</field><operation>notEqual</operation><value>Resolved</value></filters><label>Open Tickets</label></ListView>